--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "dev-ora",
-  "version": "0.0.0",
+  
+  "main": "main.js",
+  "version": "0.0.1",
+  "authors": "sc",
+  "description": "scapp",
+
+
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "electron": "ng build --base-href \"./\" && tsc -p electron && electron ."
+    "electron": "ng build --base-href ./ && electron .",
+	  "dist": "ng build --base-href ./ && electron-builder"
   },
   "private": true,
   "dependencies": {
@@ -44,5 +51,13 @@
     "tailwindcss": "^3.4.3",
     "typescript": "~5.3.2",
     "wait-on": "^7.2.0"
+  },
+  "build": {
+    "appId": "software.cantrips",
+    "productName": "SoftwareCantrips",
+    "mac": {
+      "category": "public.app-category.developer-tools"
+    },
+    "files": ["**/*", "dist/dev-ora/browser/**"]
   }
 }
