--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@octokit/rest": "^20.1.1",
     "flowbite": "^2.3.0",
     "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
     "ngx-electron": "^2.2.0",
     "ngx-toastr": "^19.0.0",
     "path": "^0.12.7",
@@ -47,7 +48,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "typescript": "~5.3.2",
     "wait-on": "^7.2.0"
   },
