--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@octokit/rest": "^20.1.1",
+    "@xterm/addon-fit": "^0.10.0",
     "flowbite": "^2.3.0",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.2.0",
@@ -33,6 +34,7 @@
     "path": "^0.12.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xterm": "^5.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
