--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "flowbite": "^2.3.0",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.2.0",
+    "ngx-cookie-service": "^18.0.0",
     "ngx-electron": "^2.2.0",
     "ngx-toastr": "^19.0.0",
     "path": "^0.12.7",
