--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "@angular/compiler-cli": "^17.2.0",
     "@types/electron": "^1.6.10",
     "@types/jasmine": "~5.1.0",
-    "electron": "^30.1.0",
+    "electron": "^32.1.2",
+    "electron-builder": "^24.13.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -60,14 +61,23 @@
     "wait-on": "^7.2.0"
   },
   "build": {
-    "appId": "software.cantrips",
-    "productName": "SoftwareCantrips",
-    "mac": {
-      "category": "public.app-category.developer-tools"
-    },
+    "appId": "devora.electron",
+    "productName": "DevOra",
     "files": [
       "**/*",
       "dist/dev-ora/browser/**"
-    ]
+    ],
+    "win": {
+      "target": "nsis",
+      "icon": "build/icon.ico"
+    },
+    "mac": {
+      "target": "dmg",
+      "icon": "build/icon.icns"
+    },
+    "linux": {
+      "target": "AppImage",
+      "icon": "build/icon.png"
+    }
   }
 }
